--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ Django==2.2.4
 django-import-export==1.2.0
 django-rest-passwordreset==1.0.0
 django-stubs==1.1.0
-
+django-throttling==0.0.1
 djangorestframework==3.10.2
 djangorestframework-stubs==1.0.0
 et-xmlfile==1.0.1
@@ -25,7 +25,7 @@ odfpy==1.4.0
 openpyxl==2.6.3
 pytz==2019.2
 PyYAML==5.1.2
-
+redis==3.3.11
 requests==2.22.0
 sentry-sdk==0.11.2
 sqlparse==0.3.0
