--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 amqp==2.5.1
+asgiref==3.4.0
 backports.csv==1.0.7
 billiard==3.6.1.0
 celery==4.3.0
@@ -6,7 +7,7 @@ certifi==2019.9.11
 chardet==3.0.4
 defusedxml==0.6.0
 diff-match-patch==20181111
-Django==2.2.4
+Django==3.2.4
 django-import-export==1.2.0
 django-rest-passwordreset==1.0.0
 django-stubs==1.1.0
@@ -30,7 +31,7 @@ requests==2.22.0
 sentry-sdk==0.11.2
 sqlparse==0.3.0
 tablib==0.13.0
-typed-ast==1.4.0
+typed-ast==1.4.3
 typing-extensions==3.7.4
 ujson==1.35
 urllib3==1.25.3
